--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -74,12 +74,17 @@
 				margin-right: 2.439%;
 			}
 
+			:host([department-banner-flag]) d2l-dropdown-more {
+				margin-left: 10px;
+				margin-right: 10px;
+			}
+
 			.loading-overlay-shown d2l-dropdown-more {
 				display: none;
 			}
 
 			@media (min-width: 1230px) {
-				d2l-dropdown-more {
+				:host:not([department-banner-flag]) d2l-dropdown-more {
 					margin-left: 30px;
 					margin-right: 30px;
 				}
@@ -95,7 +100,7 @@
 			}
 
 			@media (max-width: 615px) {
-				d2l-dropdown-more,
+				:host:not([department-banner-flag]) d2l-dropdown-more,
 				#courseName {
 					margin-left: 15px;
 					margin-right: 15px;
@@ -119,7 +124,10 @@
 			}
 
 			:host(:hover) d2l-dropdown-more,
-			:host([focused]) d2l-dropdown-more,
+			:host([focused]) d2l-dropdown-more {
+				opacity: 1;
+				padding-top: 10px;
+			}
 			:host:not([department-banner-flag]) d2l-dropdown-more {
 				opacity: 1;
 				padding-top: 30px;
