--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -120,11 +120,7 @@ An overlay for course image banners that displays the course name and menu.
 					value: false,
 					reflectToAttribute: true
 				},
-				departmentBannerFlag: {
-					type: Boolean,
-					value: false,
-					reflectToAttribute: true
-				},
+				departmentBannerFlag: Boolean,
 				/**
 				* A boolean reflecting the focus state of the element
 				*/
