Added test for showing the menu on hover

--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -120,7 +120,11 @@ An overlay for course image banners that displays the course name and menu.
 					value: false,
 					reflectToAttribute: true
 				},
-				departmentBannerFlag: Boolean,
+				departmentBannerFlag: {
+					type: Boolean,
+					value: false,
+					reflectToAttribute: true
+				},
 				/**
 				* A boolean reflecting the focus state of the element
 				*/
