--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -84,7 +84,7 @@
 			}
 
 			@media (min-width: 1230px) {
-				:host:not([department-banner-flag]) d2l-dropdown-more {
+				:host(:not([department-banner-flag])) d2l-dropdown-more {
 					margin-left: 30px;
 					margin-right: 30px;
 				}
@@ -100,7 +100,7 @@
 			}
 
 			@media (max-width: 615px) {
-				:host:not([department-banner-flag]) d2l-dropdown-more,
+				:host(:not([department-banner-flag])) d2l-dropdown-more,
 				#courseName {
 					margin-left: 15px;
 					margin-right: 15px;
@@ -128,7 +128,7 @@
 				opacity: 1;
 				padding-top: 10px;
 			}
-			:host:not([department-banner-flag]) d2l-dropdown-more {
+			:host(:not([department-banner-flag])) d2l-dropdown-more {
 				opacity: 1;
 				padding-top: 30px;
 			}
