--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -109,7 +109,7 @@
 
 			d2l-dropdown-more {
 				padding-bottom: 0;
-				padding-top: 0px;
+				padding-top: 0;
 				position: absolute;
 				right: 0;
 				opacity: 0;
