--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -184,8 +184,10 @@ An overlay for course image banners that displays the course name and menu.
 				'blur': '_onBlur'
 			},
 			attached: function() {
-				this.addEventListener('focus', this._onFocus, true);
-				this.addEventListener('blur', this._onBlur, true);
+				Polymer.RenderStatus.afterNextRender(this, function() {
+					this.addEventListener('focus', this._onFocus, true);
+					this.addEventListener('blur', this._onBlur, true);
+				}.bind(this));
 				this.$['image-selector-threshold'].scrollTarget = this.$['basic-image-selector-overlay'].scrollRegion;
 				if (this.organizationUrl) {
 					this._getOrganizationInfo();
@@ -193,8 +195,8 @@ An overlay for course image banners that displays the course name and menu.
 				this.listen(document.body, 'set-course-image', '_onSetCourseImage');
 			},
 			detached: function() {
-				this.removeEventListener('focus', this._onFocus);
-				this.removeEventListener('blur', this._onBlur);
+				this.removeEventListener('focus', this._onFocus, true);
+				this.removeEventListener('blur', this._onBlur, true);
 				this.unlisten(document.body, 'set-course-image', '_onSetCourseImage');
 			},
 			ready: function() {
