Close the menu on blur, if certain conditions are met

--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -503,6 +503,15 @@ An overlay for course image banners that displays the course name and menu.
 			},
 			_onBlur: function() {
 				this.focused = false;
+				setTimeout(function() {
+					var activeElement = Polymer.dom(document.activeElement).node;
+					if (!D2L.Dom.isComposedAncestor(this, activeElement)) {
+						this._closeDropdown();
+					}
+				}.bind(this), 0);
+			},
+			_closeDropdown: function() {
+				if (this.$$('d2l-dropdown-menu').hasAttribute('opened')) this.$$('d2l-dropdown-more').toggleOpen();
 			}
 		});
 	</script>
