fully hiding the overlay content

--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -20,6 +20,7 @@
 			}
 
 			.d2l-image-banner-overlay-content {
+				display: none;
 				height: 100%;
 				opacity: 0;
 				overflow: hidden;
@@ -30,6 +31,7 @@
 				animation-duration: 1.2s;
 				animation-fill-mode: forwards;
 				animation-name: shown;
+				display: block;
 			}
 
 			@keyframes shown {
