Add missing Dutch translation

--- a/localize-behavior.html
+++ b/localize-behavior.html
@@ -98,7 +98,7 @@
 							'undo': 'Ongedaan maken',
 							'somethingWentWrong': 'Oeps! Er is iets fout gegaan. {placeholder}.',
 							'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
-							'changeImage': 'Change Image',
+							'changeImage': 'Afbeelding wijzigen',
 							'closeSimpleOverlayAltText': 'Dialoogvenster sluiten'
 						},
 						'pt': {
