--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -504,8 +504,7 @@ An overlay for course image banners that displays the course name and menu.
 			_onBlur: function() {
 				this.focused = false;
 				setTimeout(function() {
-					var activeElement = Polymer.dom(document.activeElement).node;
-					if (!D2L.Dom.isComposedAncestor(this, activeElement)) {
+					if (!D2L.Dom.isComposedAncestor(this, D2L.Dom.Focus.getComposedActiveElement())) {
 						this._closeDropdown();
 					}
 				}.bind(this), 0);
