Added a new langterm for the remove banner alert when using the new homepage menu. This alert will only appear when the feature flag is turned on

--- a/localize-behavior.html
+++ b/localize-behavior.html
@@ -22,7 +22,8 @@
 							'somethingWentWrong': 'Oops! Something went wrong. {placeholder}.',
 							'refreshAndTryAgain': 'Refresh and try again',
 							'changeImage': 'Change Image',
-							'closeSimpleOverlayAltText' : 'Close Dialog'
+							'closeSimpleOverlayAltText' : 'Close Dialog',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'ar': {
 							'removeBanner': 'إزالة هذا الشعار',
@@ -33,7 +34,8 @@
 							'somethingWentWrong': 'عذرًا! حدث خطأ ما. {placeholder}.',
 							'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى',
 							'changeImage': 'تغيير الصورة',
-							'closeSimpleOverlayAltText': 'إغلاق مربع الحوار'
+							'closeSimpleOverlayAltText': 'إغلاق مربع الحوار',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'de': {
 							'removeBanner': 'Dieses Banner entfernen',
@@ -44,7 +46,8 @@
 							'somethingWentWrong': 'Hoppla! Etwas ist schief gelaufen. {placeholder}.',
 							'refreshAndTryAgain': 'Aktualisieren und erneut versuchen.',
 							'changeImage': 'Bild ändern',
-							'closeSimpleOverlayAltText': 'Dialogfeld schließen'
+							'closeSimpleOverlayAltText': 'Dialogfeld schließen',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'es': {
 							'removeBanner': 'Eliminar este banner',
@@ -55,7 +58,8 @@
 							'somethingWentWrong': 'Algo salió mal. {placeholder}.',
 							'refreshAndTryAgain': 'Actualice e inténtelo de nuevo',
 							'changeImage': 'Cambiar imagen',
-							'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo'
+							'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'fr': {
 							'removeBanner': 'Supprimer cette bannière',
@@ -66,7 +70,8 @@
 							'somethingWentWrong': 'Oups! Un problème est survenu. {placeholder}.',
 							'refreshAndTryAgain': 'Actualisez la page et réessayez',
 							'changeImage': 'Modifier l\'image',
-							'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue'
+							'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'ja': {
 							'removeBanner': 'このバナーを削除',
@@ -77,7 +82,8 @@
 							'somethingWentWrong': '問題が発生しました。{placeholder}。',
 							'refreshAndTryAgain': '更新してから、もう一度お試しください',
 							'changeImage': 'イメージの変更',
-							'closeSimpleOverlayAltText': 'ダイアログを閉じる'
+							'closeSimpleOverlayAltText': 'ダイアログを閉じる',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'ko': {
 							'removeBanner': '이 배너 제거',
@@ -88,7 +94,8 @@
 							'somethingWentWrong': '문제가 발생했습니다. {placeholder}.',
 							'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.',
 							'changeImage': '이미지 변경',
-							'closeSimpleOverlayAltText': '대화 상자 닫기'
+							'closeSimpleOverlayAltText': '대화 상자 닫기',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'nl': {
 							'removeBanner': 'Deze banner verwijderen',
@@ -99,7 +106,8 @@
 							'somethingWentWrong': 'Oeps! Er is iets fout gegaan. {placeholder}.',
 							'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
 							'changeImage': 'Afbeelding wijzigen',
-							'closeSimpleOverlayAltText': 'Dialoogvenster sluiten'
+							'closeSimpleOverlayAltText': 'Dialoogvenster sluiten',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'pt': {
 							'removeBanner': 'Remover este Banner',
@@ -110,7 +118,8 @@
 							'somethingWentWrong': 'Opa! Algo deu errado. {placeholder}.',
 							'refreshAndTryAgain': 'Atualizar e tentar novamente',
 							'changeImage': 'Alterar imagem',
-							'closeSimpleOverlayAltText': 'Fechar o diálogo'
+							'closeSimpleOverlayAltText': 'Fechar o diálogo',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'sv': {
 							'removeBanner': 'Ta bort banner',
@@ -121,7 +130,8 @@
 							'somethingWentWrong': 'Hoppsan! Något gick fel. {placeholder}.',
 							'refreshAndTryAgain': 'Uppdatera och försök igen',
 							'changeImage': 'Ändra bild',
-							'closeSimpleOverlayAltText': 'Stäng dialogruta'
+							'closeSimpleOverlayAltText': 'Stäng dialogruta',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'tr': {
 							'removeBanner': 'Bu Başlığı Sil',
@@ -132,7 +142,8 @@
 							'somethingWentWrong': 'Üzgünüz! Bir sorun oluştu. {placeholder}.',
 							'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin',
 							'changeImage': 'Görüntüyü Değiştir',
-							'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat'
+							'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'zh': {
 							'removeBanner': '删除此标语',
@@ -143,7 +154,8 @@
 							'somethingWentWrong': '抱歉！出现错误。{placeholder}.',
 							'refreshAndTryAgain': '请刷新并重试',
 							'changeImage': '更改图像',
-							'closeSimpleOverlayAltText': '关闭对话框'
+							'closeSimpleOverlayAltText': '关闭对话框',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						},
 						'zh-tw': {
 							'removeBanner': '移除此橫幅',
@@ -154,7 +166,8 @@
 							'somethingWentWrong': '糟糕！發生錯誤。{placeholder}。',
 							'refreshAndTryAgain': '請重新整理，並再試一次',
 							'changeImage': '變更影像',
-							'closeSimpleOverlayAltText': '關閉對話方塊'
+							'closeSimpleOverlayAltText': '關閉對話方塊',
+							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
 						}
 					};
 				}
