--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -83,7 +83,10 @@ An overlay for course image banners that displays the course name and menu.
 			button-text="[[localize('undo')]]"
 			has-close-button="true"
 			role="alert">
-			<span>[[_optBackInStart]]</span><d2l-link href$="[[_courseOfferingInfoLink]]">[[localize('courseOfferingInformation')]]</d2l-link><span>[[_optBackInEnd]]</span>
+			<div id="bannerRemovedAlertText" hidden$="[[homepageManageMenuFlag]]">
+				<span>[[_optBackInStart]]</span><d2l-link href$="[[_courseOfferingInfoLink]]">[[localize('courseOfferingInformation')]]</d2l-link><span>[[_optBackInEnd]]</span>
+			</div>
+			<span id="bannerRemovedMenuAlertText" hidden$="[[!homepageManageMenuFlag]]">[[localize('bannerRemovedMenu')]]</span>
 		</d2l-alert>
 		<d2l-alert
 			id="errorAlert"
@@ -128,6 +131,10 @@ An overlay for course image banners that displays the course name and menu.
 					type: Boolean,
 					value: false,
 					reflectToAttribute: true
+				},
+				homepageManageMenuFlag: {
+					type: Boolean,
+					value: false
 				},
 				/**
 				* A boolean reflecting the focus state of the element
