Added translations for bannerRemovedMenu

--- a/localize-behavior.html
+++ b/localize-behavior.html
@@ -35,7 +35,7 @@
 							'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى',
 							'changeImage': 'تغيير الصورة',
 							'closeSimpleOverlayAltText': 'إغلاق مربع الحوار',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'تمت إزالة الشعار! يمكنك إعادة تمكين الشعار باستخدام قائمة الصفحة الرئيسية في أسفل الشاشة.'
 						},
 						'de': {
 							'removeBanner': 'Dieses Banner entfernen',
@@ -59,7 +59,7 @@
 							'refreshAndTryAgain': 'Actualice e inténtelo de nuevo',
 							'changeImage': 'Cambiar imagen',
 							'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Banner quitado. Puede volver a habilitar el banner a través del menú de la página de inicio que se encuentra en la parte inferior de la pantalla.'
 						},
 						'fr': {
 							'removeBanner': 'Supprimer cette bannière',
@@ -71,7 +71,7 @@
 							'refreshAndTryAgain': 'Actualisez la page et réessayez',
 							'changeImage': 'Modifier l\'image',
 							'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Bannière supprimée! Vous pouvez la réactiver par l’intermédiaire du menu de la page d’accueil en bas de l’écran.'
 						},
 						'ja': {
 							'removeBanner': 'このバナーを削除',
@@ -83,7 +83,7 @@
 							'refreshAndTryAgain': '更新してから、もう一度お試しください',
 							'changeImage': 'イメージの変更',
 							'closeSimpleOverlayAltText': 'ダイアログを閉じる',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'バナーを削除しました。バナーは、画面下部にあるホームページメニューを使用して再有効化できます。'
 						},
 						'ko': {
 							'removeBanner': '이 배너 제거',
@@ -95,7 +95,7 @@
 							'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.',
 							'changeImage': '이미지 변경',
 							'closeSimpleOverlayAltText': '대화 상자 닫기',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': '배너가 삭제되었습니다. 화면 하단의 홈페이지 메뉴를 사용하여 배너를 다시 활성화할 수 있습니다.'
 						},
 						'nl': {
 							'removeBanner': 'Deze banner verwijderen',
@@ -107,7 +107,7 @@
 							'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
 							'changeImage': 'Afbeelding wijzigen',
 							'closeSimpleOverlayAltText': 'Dialoogvenster sluiten',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Banner verwijderd! U kunt de banner via het menu Startpagina onder aan het scherm opnieuw inschakelen.'
 						},
 						'pt': {
 							'removeBanner': 'Remover este Banner',
@@ -119,7 +119,7 @@
 							'refreshAndTryAgain': 'Atualizar e tentar novamente',
 							'changeImage': 'Alterar imagem',
 							'closeSimpleOverlayAltText': 'Fechar o diálogo',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Banner removido! Você pode reativar o banner usando o menu Página Inicial, na parte inferior da tela.'
 						},
 						'sv': {
 							'removeBanner': 'Ta bort banner',
@@ -131,7 +131,7 @@
 							'refreshAndTryAgain': 'Uppdatera och försök igen',
 							'changeImage': 'Ändra bild',
 							'closeSimpleOverlayAltText': 'Stäng dialogruta',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Banner borttagen! Du kan återaktivera bannern med hjälp av hemsidesmenyn längst ned på skärmen.'
 						},
 						'tr': {
 							'removeBanner': 'Bu Başlığı Sil',
@@ -143,7 +143,7 @@
 							'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin',
 							'changeImage': 'Görüntüyü Değiştir',
 							'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': 'Başlık kaldırıldı! Ekranın alt kısmındaki Ana sayfa menüsünü kullanarak başlığı yeniden etkinleştirebilirsiniz.'
 						},
 						'zh': {
 							'removeBanner': '删除此标语',
@@ -155,7 +155,7 @@
 							'refreshAndTryAgain': '请刷新并重试',
 							'changeImage': '更改图像',
 							'closeSimpleOverlayAltText': '关闭对话框',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': '横幅已移除！您可以使用屏幕下方的主页按钮重新启动此横幅。'
 						},
 						'zh-tw': {
 							'removeBanner': '移除此橫幅',
@@ -167,7 +167,7 @@
 							'refreshAndTryAgain': '請重新整理，並再試一次',
 							'changeImage': '變更影像',
 							'closeSimpleOverlayAltText': '關閉對話方塊',
-							'bannerRemovedMenu': 'Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.'
+							'bannerRemovedMenu': '橫幅移已移除！您可以使用畫面底部的首頁功能表重新啟用橫幅。'
 						}
 					};
 				}
