--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,7 @@
 			<demo-snippet>
 				<template>
 					<demo-image-banner-container class="d2l-course-banner-container">
-						<d2l-image-banner-overlay organization-url="/default" has-change-image></d2l-image-banner-overlay>
+						<d2l-image-banner-overlay organization-url="/default" department-banner-flag has-change-image></d2l-image-banner-overlay>
 					</demo-image-banner-container>
 				</template>
 			</demo-snippet>
