--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -79,6 +79,7 @@
 			:host([department-banner-flag]) d2l-dropdown-more {
 				margin-left: 10px;
 				margin-right: 10px;
+				margin-top: 10px;
 			}
 
 			.loading-overlay-shown d2l-dropdown-more {
@@ -89,6 +90,7 @@
 				:host(:not([department-banner-flag])) d2l-dropdown-more {
 					margin-left: 30px;
 					margin-right: 30px;
+					margin-top: 30px;
 				}
 
 				:host-context([dir='rtl']) #courseName.menu-exists {
@@ -102,7 +104,11 @@
 			}
 
 			@media (max-width: 615px) {
-				:host(:not([department-banner-flag])) d2l-dropdown-more,
+				:host(:not([department-banner-flag])) d2l-dropdown-more {
+					margin-left: 15px;
+					margin-right: 15px;
+					margin-top: 15px;
+				}
 				#courseName {
 					margin-left: 15px;
 					margin-right: 15px;
@@ -110,12 +116,8 @@
 			}
 
 			d2l-dropdown-more {
-				padding-bottom: 0;
-				padding-top: 0;
 				position: absolute;
 				right: 0;
-				opacity: 0;
-				transition: opacity 0.25s, padding-top 0.25s;
 			}
 			d2l-dropdown-more[hidden] {
 				display: none;
@@ -123,16 +125,6 @@
 			:host-context([dir='rtl']) d2l-dropdown-more {
 				left: 0;
 				right: auto;
-			}
-
-			:host(:hover) d2l-dropdown-more,
-			:host([focused]) d2l-dropdown-more {
-				opacity: 1;
-				padding-top: 10px;
-			}
-			:host(:not([department-banner-flag])) d2l-dropdown-more {
-				opacity: 1;
-				padding-top: 30px;
 			}
 
 			:host-context([dir='rtl']) #courseName.menu-exists {
