Fix property name for d2l-dropdown-more.

--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -37,7 +37,7 @@ An overlay for course image banners that displays the course name and menu.
 			<d2l-dropdown-more
 				class="d2l-focusable"
 				hidden$="[[!_showDropdown]]"
-				label="[[localize('bannerSettings')]]"
+				text="[[localize('bannerSettings')]]"
 				translucent
 				visible-on-ancestor>
 				<d2l-dropdown-menu>
