--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -85,10 +85,7 @@ An overlay for course image banners that displays the course name and menu.
 			button-text="[[localize('undo')]]"
 			has-close-button="true"
 			role="alert">
-			<div id="bannerRemovedAlertText" hidden$="[[homepageManageMenuFlag]]">
-				<span>[[_optBackInStart]]</span><d2l-link href$="[[_courseOfferingInfoLink]]">[[localize('courseOfferingInformation')]]</d2l-link><span>[[_optBackInEnd]]</span>
-			</div>
-			<span id="bannerRemovedMenuAlertText" hidden$="[[!homepageManageMenuFlag]]">[[localize('bannerRemovedMenu')]]</span>
+			<span id="bannerRemovedMenuAlertText">[[localize('bannerRemovedMenu')]]</span>
 		</d2l-alert>
 		<d2l-alert
 			id="errorAlert"
@@ -124,16 +121,6 @@ An overlay for course image banners that displays the course name and menu.
 					type: Boolean,
 					value: false,
 					reflectToAttribute: true
-				},
-				departmentBannerFlag: {
-					type: Boolean,
-					observer: '_onDepartmentBannerFlag',
-					value: false,
-					reflectToAttribute: true
-				},
-				homepageManageMenuFlag: {
-					type: Boolean,
-					value: false
 				},
 				_courseName: String, // the name to display in the main text area of the overlay
 				_removeBannerUrl: String, // the URL of the siren action to be executed when the remove banner menu option is clicked
@@ -247,14 +234,6 @@ An overlay for course image banners that displays the course name and menu.
 			},
 			_onClearImageScrollThreshold: function() {
 				this.$['image-selector-threshold'].clearTriggers();
-			},
-			_onDepartmentBannerFlag: function(newValue) {
-				var opener = Polymer.dom(this.root).querySelector('d2l-dropdown-more');
-				if (newValue) {
-					opener.setAttribute('visible-on-ancestor', 'visible-on-ancestor');
-				} else {
-					opener.removeAttribute('visible-on-ancestor');
-				}
 			},
 			_onSetCourseImage: function(e) {
 				this.$['basic-image-selector-overlay'].close();
