--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -56,7 +56,7 @@
 				}
 			}
 
-			#courseName {
+			#bannerTitle {
 				box-sizing: border-box;
 				color: var(--d2l-color-white);
 				-webkit-line-clamp: 2;
@@ -71,7 +71,7 @@
 			}
 
 			d2l-dropdown-more,
-			#courseName {
+			#bannerTitle {
 				margin-left: 2.439%;
 				margin-right: 2.439%;
 			}
@@ -93,12 +93,12 @@
 					margin-top: 30px;
 				}
 
-				:host-context([dir='rtl']) #courseName.menu-exists {
+				:host-context([dir='rtl']) #bannerTitle.menu-exists {
 					padding-left: 50px;
 					padding-right: 0;
 				}
 
-				#courseName.menu-exists {
+				#bannerTitle.menu-exists {
 					padding-right: 50px;
 				}
 			}
@@ -109,7 +109,7 @@
 					margin-right: 15px;
 					margin-top: 15px;
 				}
-				#courseName {
+				#bannerTitle {
 					margin-left: 15px;
 					margin-right: 15px;
 				}
@@ -127,12 +127,12 @@
 				right: auto;
 			}
 
-			:host-context([dir='rtl']) #courseName.menu-exists {
+			:host-context([dir='rtl']) #bannerTitle.menu-exists {
 				padding-left: 40px;
 				padding-right: 0;
 			}
 
-			#courseName.menu-exists {
+			#bannerTitle.menu-exists {
 				padding-right: 40px;
 			}
 
