--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -55,7 +55,6 @@ An overlay for course image banners that displays the course name and menu.
 							on-d2l-menu-item-select="_launchCourseTileImageSelector">
 						</d2l-menu-item>
 						<d2l-menu-item
-							id="change-banner-title-button"
 							hidden$="[[!canChangeBannerTitle]]"
 							text="Change Banner Title"
 							on-d2l-menu-item-select="_changeBannerTitle">
@@ -348,7 +347,7 @@ An overlay for course image banners that displays the course name and menu.
 
 				this._removeBannerUrl = (organizationEntity.getActionByName('remove-homepage-banner') || {}).href;
 				this._changeImageUrl = (organizationEntity.getActionByName('set-catalog-image') || {}).href;
-				if (this._removeBannerUrl || this._changeImageUrl) {
+				if (this._removeBannerUrl || this._changeImageUrl || canChangeBannerTitle) {
 					Polymer.dom(this.$.bannerTitle).classList.add('menu-exists');
 				}
 
