US99982-use this to refer class variable

--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -347,7 +347,7 @@ An overlay for course image banners that displays the course name and menu.
 
 				this._removeBannerUrl = (organizationEntity.getActionByName('remove-homepage-banner') || {}).href;
 				this._changeImageUrl = (organizationEntity.getActionByName('set-catalog-image') || {}).href;
-				if (this._removeBannerUrl || this._changeImageUrl || canChangeBannerTitle) {
+				if (this._removeBannerUrl || this._changeImageUrl || this.canChangeBannerTitle) {
 					Polymer.dom(this.$.bannerTitle).classList.add('menu-exists');
 				}
 
