--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -134,7 +134,10 @@ An overlay for course image banners that displays the course name and menu.
 				/**
 				 * Whether or not the user can change banner title
 				 */
-				canChangeBannerTitle: Boolean,
+				canChangeBannerTitle: {
+					type: Boolean,
+					value: false
+				},
 				_removeBannerUrl: String, // the URL of the siren action to be executed when the remove banner menu option is clicked
 				_addBannerUrl: String, // the URL of the siren action to be executed when the Undo option is clicked on the alert
 				_changeImageUrl: String, // the URL of the siren action to be executed to set a course image catalog image for a course
