--- a/localize-behavior.html
+++ b/localize-behavior.html
@@ -1,17 +1,17 @@
 <link rel="import" href="../d2l-localize-behavior/d2l-localize-behavior.html">
-<link rel="import" href="lang/ar.html">
-<link rel="import" href="lang/de.html">
-<link rel="import" href="lang/en.html">
-<link rel="import" href="lang/es.html">
-<link rel="import" href="lang/fr.html">
-<link rel="import" href="lang/ja.html">
-<link rel="import" href="lang/ko.html">
-<link rel="import" href="lang/nl.html">
-<link rel="import" href="lang/pt.html">
-<link rel="import" href="lang/sv.html">
-<link rel="import" href="lang/tr.html">
-<link rel="import" href="lang/zh-tw.html">
-<link rel="import" href="lang/zh.html">
+<link rel="import" href="build/lang/ar.html">
+<link rel="import" href="build/lang/de.html">
+<link rel="import" href="build/lang/en.html">
+<link rel="import" href="build/lang/es.html">
+<link rel="import" href="build/lang/fr.html">
+<link rel="import" href="build/lang/ja.html">
+<link rel="import" href="build/lang/ko.html">
+<link rel="import" href="build/lang/nl.html">
+<link rel="import" href="build/lang/pt.html">
+<link rel="import" href="build/lang/sv.html">
+<link rel="import" href="build/lang/tr.html">
+<link rel="import" href="build/lang/zh-tw.html">
+<link rel="import" href="build/lang/zh.html">
 
 <script>
 	window.D2L = window.D2L || {};
@@ -62,7 +62,7 @@
 		D2L.PolymerBehaviors.ImageBanner.LangPtBehavior,
 		D2L.PolymerBehaviors.ImageBanner.LangSvBehavior,
 		D2L.PolymerBehaviors.ImageBanner.LangTrBehavior,
-		D2L.PolymerBehaviors.ImageBanner.LangZhTwBehavior,
+		D2L.PolymerBehaviors.ImageBanner.LangZhtwBehavior,
 		D2L.PolymerBehaviors.ImageBanner.LangZhBehavior
 	];
 </script>
