--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -354,9 +354,10 @@ An overlay for course image banners that displays the course name and menu.
 					Polymer.dom(this.$.bannerTitle).classList.add('menu-exists');
 				}
 
+				var self = this;
 				Polymer.RenderStatus.afterNextRender(this, function() {
-					this._addPerfMark('org-response.rendered');
-					this._addPerfMeasure('ready-to-org-response-displayed', 'ready', 'org-response.rendered');
+					self._addPerfMark('org-response.rendered');
+					self._addPerfMeasure('ready-to-org-response-displayed', 'ready', 'org-response.rendered');
 				});
 
 				if (this._shouldRefreshCourseImage) {
