--- a/test/d2l-image-banner-overlay.html
+++ b/test/d2l-image-banner-overlay.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-		<script src="../../fetch/fetch.js"></script>
-		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-		<script src="../../web-component-tester/browser.js"></script>
-		<link rel="import" href="../../promise-polyfill/promise-polyfill-lite.html"></link>
-		<link rel="import" href="../d2l-image-banner-overlay.html">
+		<script src="../../whatwg-fetch/fetch.js"></script>
+		<script src="../../@babel/polyfill/browser.js"></script>
+		<script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+		<script src="../../wct-browser-legacy/browser.js"></script>
+		<script type="module" src="../../@polymer/promise-polyfill/promise-polyfill-lite.js"></script></link>
+		<script type="module" src="../d2l-image-banner-overlay.js"></script>
 	</head>
 	<body>
 		<test-fixture id="d2l-image-banner-overlay-fixture">
@@ -17,5 +18,4 @@
 		</test-fixture>
 
 		<script src="d2l-image-banner-overlay.js"></script>
-	</body>
-</html>
+	</bo<script src="./d2l-image-banner-overlay.js"></script>
