Polymer 3 Conversion - Patches

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 		<title>d2l-image-banner-overlay demo</title>
 		<script src="../../whatwg-fetch/fetch.js"></script>
-		<script src="../../sinonjs/sinon.js"></script>
+		<script src="../../sinon/pkg/sinon.js"></script>
 		<script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-		<script src="./demo-mock.js"></script>
-		<script type="module" src="../../@polymer/promise-polyfill/promise-polyfill-lite.js"></script></link>
+		<script type="module" src="../../@polymer/promise-polyfill/promise-polyfill-lite.js"></script>
 		<script type="module" src="../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
 		<script type="module" src="../../@polymer/iron-demo-helpers/demo-snippet.js"></script>
 		<script type="module" src="../../d2l-typography/d2l-typography.js"></script>
 		<script type="module" src="../d2l-image-banner-overlay.js"></script>
+		<script type="module" src="./demo-mock.js"></script>
 		<script type="module" src="./demo-image-banner-container.js"></script>
 		<!-- FIXME(polymer-modulizer):
 		These imperative modules that innerHTML your HTML are
